--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,24 @@
 ---
-  - include_vars: ../vars/main.yml
+- hosts: awsserver
+  gather_facts: no
+  become: true
+  vars:
+    jenkins_user: jenkins
+    jenkins_password: 'admin'
+
+    mongo_secrets:
+      user_password: akshay
+
+    os_environment_secrets:
+      - key: MAIL_PASSWORD 
+        value : csc519S19_asaxena5
+      - key: MONGO_PASSWORD
+        value: "{{ mongo_secrets.user_password }}"
   
   - import_tasks: node_install.yml
   - import_tasks: mongo_install.yml
   - import_tasks: nginx_install.yml
   - import_tasks: bash_config.yml
   - import_tasks: repository_configuration.yml
+
+  
