Included additional vars

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -18,8 +18,14 @@ checkbox:
   port: 3002
   location: /home/vagrant/checkbox/
 
+jenkins_user: jenkins
+jenkins_password: 'admin'
+
+mongo_secrets:
+  user_password: akshay
+
 os_environment:
-  - key: MAIL_SMTP 
+  - key: MAIL_SMTP
     value : smtp.zoho.com
   - key: MAIL_USER
     value: csc519S19_asaxena5@zoho.com
@@ -29,9 +35,12 @@ os_environment:
     value: 127.0.0.1
   - key: MONGO_USER
     value: root
-      
+  - key: MAIL_PASSWORD
+    value : csc519S19_asaxena5
+  - key: MONGO_PASSWORD
+    value: "{{ mongo_secrets.user_password }}"
+
 checkbox_deploy_path: deploy/production.git
 git_repository_path: '{{ checkbox.location }}deploy/production.git'
 checkbox_job_name: checkbox
 jenkins_seed_template: 'pipelineJob'
-
