Changing user for AWS Instance

--- a/tasks/repository_configuration.yml
+++ b/tasks/repository_configuration.yml
@@ -18,7 +18,7 @@
       repo: git@github.ncsu.edu:asaxena5/checkbox.io-private.git
       dest: '{{ checkbox.location }}'
       accept_hostkey: yes
-      key_file: /home/vagrant/.ssh/id_rsa_github2
+      key_file: /home/ubuntu/.ssh/id_rsa_github2
     when: checkbox_available.stat.exists == false
     become: true
 
