Start & stop nginx

--- a/tasks/repository_configuration.yml
+++ b/tasks/repository_configuration.yml
@@ -81,3 +81,11 @@
   - name: Copy post-receive script
     template: src=/home/vagrant/Playbook/templates/hooks/postreceive.j2 dest={{ git_repository_path }}/hooks/post-receive mode=0755
     become: yes
+
+  - name: Stop nginx service
+    command: /etc/init.d/nginx stop
+    become: true
+
+  - name: Start nginx service
+    command: /etc/init.d/nginx stop
+    become: true
