--- a/tasks/repository_configuration.yml
+++ b/tasks/repository_configuration.yml
@@ -87,5 +87,5 @@
     become: true
 
   - name: Start nginx service
-    command: /etc/init.d/nginx stop
+    command: /etc/init.d/nginx start
     become: true
